<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Accumulator settings"
        android:key="Accumulator_category">

        <Preference android:title="Reset Recorded Energy"
            android:key="@string/preference_resetArduinoEnergy_key"
            android:summary="Reset the recorded accumulator energy on Arduino"/>

        <EditTextPreference
            android:key="@string/preference_accumulator_energy_key"
            android:title="@string/preference_accumulator_energy_title"
            android:summary="Set maximum accumulator energy"
            android:dialogTitle="Maximum accumulator energy"
            android:dialogMessage="Set maximum accumulator energy"
            android:defaultValue="@string/preference_accumulator_energy_default"
            android:inputType="number"/>

        <EditTextPreference
            android:key="@string/preference_accumulator_voltage_key"
            android:title="@string/preference_accumulator_voltage_title"
            android:summary="Set maximum accumulator voltage"
            android:dialogTitle="Maximum accumulator voltage"
            android:dialogMessage="Set maximum accumulator voltage"
            android:defaultValue="@string/preference_accumulator_voltage_default"
            android:inputType="number"/>

        <EditTextPreference
            android:key="@string/preference_accumulator_current_key"
            android:title="@string/preference_accumulator_current_title"
            android:summary="Set maximum accumulator current"
            android:dialogTitle="Maximum accumulator current"
            android:dialogMessage="Set maximum accumulator current"
            android:defaultValue="@string/preference_accumulator_current_default"
            android:inputType="number"/>


    </PreferenceCategory>

    <PreferenceCategory
        android:title="Statistics settings"
        android:key="Statistics_category">


        <Preference android:title="Reset Recorded Data"
            android:key="@string/preference_resetRecordedData_key"
            android:summary="Reset recorded statistics on mobile phone"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="Connection settings"
        android:key="Connection_category">


        <Preference android:title="Select Bluetooth Device"
            android:key="@string/preference_resetMacAddress_key"
            android:summary="Select BT-Device which is connected to Arduino"/>


    </PreferenceCategory>
</PreferenceScreen>
